# template-python

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  cspell-words.txt  cspell.config.yaml  pyproject.toml  ruff.toml  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: check.yml  update-pre-commit-hooks.yml  update.yml
scripts/: run_pytest.sh  update.sh
src/: example.py  helper_logging.py  main.py
tests/: example_test.py  test_example.py  test_main.py
